--- a/package.json
+++ b/package.json
@@ -1,27 +1,63 @@
 {
-  "name": "airule-frontend",
-  "version": "0.1.0",
+  "name": "template",
+  "version": "0.0.0-stub",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.0.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "lucide-react": "^0.309.0",
+    "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.0.4"
+    "tailwind-merge": "^2.2.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@storybook/addon-a11y": "^7.6.7",
+    "@storybook/addon-essentials": "7.6.7",
+    "@storybook/addon-interactions": "7.6.7",
+    "@storybook/addon-links": "7.6.7",
+    "@storybook/addon-onboarding": "1.0.10",
+    "@storybook/addon-storysource": "^7.6.7",
+    "@storybook/addon-themes": "^7.6.7",
+    "@storybook/blocks": "7.6.7",
+    "@storybook/csf-tools": "^7.6.7",
+    "@storybook/nextjs": "7.6.7",
+    "@storybook/react": "7.6.7",
+    "@storybook/test": "7.6.7",
+    "@storybook/test-runner": "^0.16.0",
+    "@storybook/types": "^7.6.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@typescript-eslint/eslint-plugin": "^6.18.1",
+    "@typescript-eslint/parser": "^6.18.1",
     "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
     "eslint": "^8",
-    "eslint-config-next": "14.0.4"
+    "eslint-config-next": "14.0.4",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-eslint-comments": "^3.2.0",
+    "eslint-plugin-storybook": "^0.6.15",
+    "eslint-plugin-trim": "^0.5.0",
+    "msw": "^2.0.13",
+    "msw-storybook-addon": "2.0.0--canary.122.bf62ea8.0",
+    "postcss": "^8",
+    "prettier": "^3.1.1",
+    "prettier-plugin-tailwindcss": "^0.5.11",
+    "storybook": "7.6.7",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
